fixed login screen on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ html {
     box-sizing: border-box;
 }
 
+img {
+    max-width: 100%;
+}
+
 .sr-only{
     position: absolute;
     height: 1px;
@@ -86,7 +90,7 @@ header nav a{
 }
 
 .content .banner h3 {
-    width: 50%;
+    width: 38rem;
     color: var(--psGray);
     font-size: 2.5rem;
     text-transform: uppercase;
@@ -184,6 +188,7 @@ footer {
 footer .footer {
     background-color: var(--psYellow);
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 0 10vw;
@@ -191,6 +196,7 @@ footer .footer {
 
 footer .footerContent {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
 }
 
@@ -375,11 +381,13 @@ button:active {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-bottom: 10rem;
 }
 
 .form-div {
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-    padding: 3.5rem;
+    padding: min(3.5rem,2vw);
+    
     width: 25.5rem;
     display: flex;
     flex-direction: column;
